Updated findPiece and getTeamPieces functions to fix out of bounds errors; continued debugging to work on passing MakeMoveTests.